--- a/variants/alpine/git/Dockerfile
+++ b/variants/alpine/git/Dockerfile
@@ -1,9 +1,10 @@
 FROM alpine:3.8
 
 RUN apk add --no-cache curl \
-    && curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.14.3/bin/linux/amd64/kubectl -o /kubectl \
-    && chmod +x /kubectl \
+    && curl -L https://storage.googleapis.com/kubernetes-release/release/v1.14.3/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl \
+    && chmod +x /usr/local/bin/kubectl \
     && apk del curl
 
 RUN apk add --no-cache git
 
+ENTRYPOINT [ "/usr/local/bin/kubectl" ]
