--- a/variants/alpine/kustomize/Dockerfile
+++ b/variants/alpine/kustomize/Dockerfile
@@ -1,12 +1,12 @@
 FROM alpine:3.8
 
 RUN apk add --no-cache curl \
-    && curl -L https://storage.googleapis.com/kubernetes-release/release/v1.14.3/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl \
+    && curl -L https://storage.googleapis.com/kubernetes-release/release/v1.14.4/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl \
     && chmod +x /usr/local/bin/kubectl \
     && apk del curl
 
 RUN apk add --no-cache curl \
-    && curl -L https://github.com/kubernetes-sigs/kustomize/releases/download/v3.0.0-pre/kustomize_3.0.0-pre_linux_amd64 -o /usr/local/bin/kustomize \
+    && curl -L https://github.com/kubernetes-sigs/kustomize/releases/download/v3.0.2/kustomize_3.0.2_linux_amd64 -o /usr/local/bin/kustomize \
     && chmod +x /usr/local/bin/kustomize \
     && apk del curl
 
