--- a/variants/v1.18.15-alpine-3.8/Dockerfile
+++ b/variants/v1.18.15-alpine-3.8/Dockerfile
@@ -1,7 +1,11 @@
 FROM alpine:3.8
+ARG TARGETPLATFORM
+ARG BUILDPLATFORM
+RUN echo "I am running on $BUILDPLATFORM, building for $TARGETPLATFORM"
 
+# kubectl
 RUN apk add --no-cache curl \
-    && curl -L https://storage.googleapis.com/kubernetes-release/release/v1.18.15/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl \
+    && curl -L https://storage.googleapis.com/kubernetes-release/release/v1.18.15/bin/$TARGETPLATFORM/kubectl -o /usr/local/bin/kubectl \
     && chmod +x /usr/local/bin/kubectl \
     && apk del curl
 
